--- a/style.css
+++ b/style.css
@@ -291,6 +291,7 @@ button {
     }
     .nav-links ul li {
         width: 100%;
+        margin: 12px 0;
     }
     .btn-close .fas{
         padding: 10px 15px;
