--- a/style.css
+++ b/style.css
@@ -65,6 +65,19 @@ button {
 .groundended{
     text-align: center;
     margin: 40px 0;
+    padding: 10px;
+    transition: .7s;
+
+}
+.groundended img{
+    width: 350px;
+    height: 200px;
+}
+.groundended img:hover{
+    transform: scale(1.4);
+    z-index: 5;
+    background-color: white;
+    transition: .6s;
 }
 .textOurModel{
     margin-left: 70px;
@@ -248,6 +261,10 @@ button {
 .btn-more{
     display: none;
 }
+.xcxxxx{
+    display: flex;
+    justify-content: center;
+}
 @media (max-width:700px)
 {
     .vertical{
@@ -290,7 +307,7 @@ button {
         font-size: 10px;
     }
     .nav-links ul li {
-        width: 100%;
+        width: 100% !important;
         margin: 12px 0;
     }
     .btn-close .fas{
@@ -384,3 +401,4 @@ button {
         transition: .5s ;
     }
 }
+
