--- a/css/leaderShip.css
+++ b/css/leaderShip.css
@@ -72,7 +72,7 @@ body{
 }
 .nav-links ul li{
     list-style: none;
-    width: 170px;
+    width: auto;
 }
 .nav-links ul li a{
     color: black;
@@ -132,7 +132,7 @@ body{
     margin-bottom: 80px;
 }
 .itemHeader1{
-    background-image: url(image/image1.svg);
+    background-image: url(../image/image1.svg);
     width: 100%;
     height: 110vh;
     background-position: center;
@@ -142,7 +142,7 @@ body{
     margin-bottom: 80px;
 }
 .itemHeader2{
-    background-image: url(image/image2.svg);
+    background-image: url(../image/image2.svg);
     width: 100%;
     height: 110vh;
     background-position: center;
@@ -152,7 +152,7 @@ body{
     margin-bottom: 80px;
 }
 .itemHeader3{
-    background-image: url(image/image3.svg);
+    background-image: url(../image/image3.svg);
     width: 100%;
     height: 110vh;
     background-position: center;
@@ -162,7 +162,7 @@ body{
     margin-bottom: 80px;
 }
 .itemHeader4{
-    background-image: url(image/image4.svg);
+    background-image: url(../image/image4.svg);
     width: 100%;
     height: 110vh;
     background-position: center;
@@ -172,7 +172,7 @@ body{
     margin-bottom: 80px;
 }
 .itemHeader5{
-    background-image: url(image/image5.svg);
+    background-image: url(../image/image5.svg);
     width: 100%;
     height: 110vh;
     background-position: center;
@@ -182,7 +182,7 @@ body{
     margin-bottom: 80px;
 }
 .itemHeader6{
-    background-image: url(image/image6.svg);
+    background-image: url(../image/image6.svg);
     width: 100%;
     height: 110vh;
     background-position: center;
@@ -192,7 +192,7 @@ body{
     margin-bottom: 80px;
 }
 .itemHeader7{
-    background-image: url(image/image7.svg);
+    background-image: url(../image/image7.svg);
     width: 100%;
     height: 110vh;
     background-position: center;
@@ -202,7 +202,7 @@ body{
     margin-bottom: 80px;
 }
 .itemHeader8{
-    background-image: url(image/image8.svg);
+    background-image: url(../image/image8.svg);
     width: 100%;
     height: 110vh;
     background-position: center;
@@ -212,7 +212,7 @@ body{
     margin-bottom: 80px;
 }
 .itemHeader9{
-    background-image: url(image/image9.svg);
+    background-image: url(../image/image9.svg);
     width: 100%;
     height: 110vh;
     background-position: center;
@@ -222,7 +222,7 @@ body{
     margin-bottom: 80px;
 }
 .itemHeader10{
-    background-image: url(image/image10.svg);
+    background-image: url(../image/image10.svg);
     width: 100%;
     height: 110vh;
     background-position: center;
@@ -232,7 +232,7 @@ body{
     margin-bottom: 80px;
 }
 .itemHeader11{
-    background-image: url(image/image11.svg);
+    background-image: url(../image/image11.svg);
     width: 100%;
     height: 110vh;
     background-position: center;
@@ -242,7 +242,7 @@ body{
     margin-bottom: 80px;
 }
 .itemHeader12{
-    background-image: url(image/image12.svg);
+    background-image: url(../image/image12.svg);
     width: 100%;
     height: 110vh;
     background-position: center;
@@ -252,7 +252,7 @@ body{
     margin-bottom: 80px;
 }
 .itemHeader13{
-    background-image: url(image/cccccc.svg);
+    background-image: url(../image/cccccc.svg);
     width: 100%;
     height: 110vh;
     background-position: center;
@@ -262,7 +262,7 @@ body{
     margin-bottom: 80px;
 }
 .itemHeader14{
-    background-image: url(image/zzzz.svg);
+    background-image: url(../image/zzzz.svg);
     width: 100%;
     height: 110vh;
     background-position: center;
@@ -334,7 +334,8 @@ body{
     }
     .nav-links ul li {
         width: 100%;
-        margin: 10px 0;
+        margin: 7px 0;
+        text-align: left;
     }
     .btn-close .fas{
         padding: 10px 15px;
