--- a/css/leaderShip.css
+++ b/css/leaderShip.css
@@ -122,7 +122,7 @@ body{
     text-decoration: underline;
 }
 .about-us{
-    background-image: url(image/about.png);
+    background-image: url(../image/about.png);
     width: 100%;
     height: 110vh;
     background-position: center;
@@ -336,6 +336,7 @@ body{
         width: 100%;
         margin: 7px 0;
         text-align: left;
+        padding-left: 7px;
     }
     .btn-close .fas{
         padding: 10px 15px;
