--- a/css/leaderShip.css
+++ b/css/leaderShip.css
@@ -291,6 +291,9 @@ body{
     color: red;
     font-size: 30px;
 }
+.biblical{
+    font-size: 18px;
+}
 @media (max-width:700px)
 {
     .vertical{
