--- a/css/leaderShip.css
+++ b/css/leaderShip.css
@@ -51,11 +51,11 @@ body{
     position: relative;
     margin-bottom: 80px;
 }
-.btn-close,.btn-bars{
+/* .btn-close,.btn-bars{
     display: none;
 }
 
-.nav-bar{
+/* .nav-bar{
     padding-top: 40px;
     display: flex;
 }
@@ -83,7 +83,7 @@ body{
 .nav-links ul li:hover:after{
     width: 100%;
     transition: .5s;
-}
+} */ */
 .title{
     color: #ED6A47;
     font-weight: 600;
@@ -296,7 +296,7 @@ body{
 }
 @media (max-width:700px)
 {
-    .vertical{
+    /* .vertical{
         display: none;
     }
     .btn-bars{
@@ -354,7 +354,7 @@ body{
     }
     .nav-logo{
         padding-top:20px;
-    }
+    } */
     .sdfg{
         width: 200px !important;
     }
