--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,15 @@ body{
     /* position: relative; */
     height: 100vh;
     background-repeat: no-repeat;
-    animation: zoomin 7s infinite;
+    animation: zoomin 20s infinite;
 }
 @keyframes zoomin {
     0% {
-        -webkit-transform: scaleY(2)
+        -webkit-transform: scale(1)
+        
     }
     100% {
-        -webkit-transform: scaleY(1)
+        -webkit-transform: scale(1.5)
     }
 }
 #closeNavbar{
@@ -75,7 +76,7 @@ body{
 }
 .introduce{
     position: absolute;
-    bottom: 0;
+    bottom: -150px;
     color: white;
     font-size: 12px;
     padding-bottom: 30px;
@@ -94,7 +95,7 @@ body{
     background-image: url(../image/about-us.png);
     width: 100%;
     height: 60vh;
-    margin-top: 60px;
+    margin-top: 170px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -338,5 +339,14 @@ body{
     }
     .image-1{
         margin-top: 20px;
+    }
+    .aboutUs{
+        margin-top: 60px;
+    }
+    .introduce{
+        bottom: 0;
+    }
+    .text .wow {
+        animation-delay: 1s!important;
     }
 }
