--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,14 @@ body{
     font-family: 'Libre Baskerville', serif;
 }
 .header{
-    background-image: url(../image/header.png);
+    background-image: url(../image/header.svg);
     background-position:center;
     background-size: cover;
-    /* position: relative; */
+    position: relative;
     height: 100vh;
     background-repeat: no-repeat;
     animation: zoomin 20s infinite;
+    transition: .7s;
 }
 @keyframes zoomin {
     0% {
@@ -22,6 +23,7 @@ body{
 #closeNavbar{
     position: absolute;
     top: 0;
+    left: 0;
     display: flex;
     height: 100px;
     align-items: center;
@@ -76,14 +78,14 @@ body{
 }
 .introduce{
     position: absolute;
-    bottom: -150px;
+    bottom: 0px;
     color: white;
-    font-size: 12px;
+    font-size: 30px;
     padding-bottom: 30px;
     text-transform: uppercase;
 }
 .textUp{
-    font-size: 28px;
+    font-size: 30px;
 }
 .text{
     display: flex;
@@ -95,7 +97,7 @@ body{
     background-image: url(../image/about-us.png);
     width: 100%;
     height: 60vh;
-    margin-top: 170px;
+    margin-top: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -104,23 +106,20 @@ body{
 .aboutUs div{
     color: white;
     font-weight: 700;
-    font-size: 40px;
+    font-size: 30px;
     text-decoration: underline;
 }
 .groundended{
     transition: .7s;
-    margin: 30px auto;
     text-align: center;
 }
 .groundended img{
-    width: 350px;
-    height: 200px;
+    margin-top: 30px;
 }
 .groundended img:hover{
-    transform: scale(1.9);
+    transform: scale(2.2);
     background-color: white;
     transition: .6s;
-    margin: 100px 0;
 }
 .btn-more{
     display: none;
@@ -342,9 +341,6 @@ body{
     }
     .aboutUs{
         margin-top: 60px;
-    }
-    .introduce{
-        bottom: 0;
     }
     .text .wow {
         animation-delay: 1s!important;
