--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ body{
     height: 100px;
     align-items: center;
     text-align: center;
+    justify-content: space-around;
 }
 #closeNavbar div{
     width: 200px;
